# sweeney

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: OPERATIONS.md
scripts/: bootstrap_wsl.sh  reset_openclaw_and_setup_bot.sh  smoke_test_10m.sh
src/openclaw_bot/: __init__.py  bot.py  bybit_market.py  config.py  execution.py  llm.py  logging_utils.py  main.py  market_data.py  models.py  notifier.py  openclaw_adapter.py  risk.py  server.py  storage.py  strategy.py  telegram.py  whatsapp.py
tests/: test_execution.py  test_llm.py  test_risk.py  test_storage.py  test_strategy.py  test_telegram.py  test_whatsapp.py
