[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-telegram-trader"
version = "0.1.0"
description = "Risk-first crypto trading bot scaffold with Telegram controls"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
openclaw-bot = "openclaw_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
